welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:25: error: type mismatch;
 found   : Unit
 required: Boolean
                 				if(getCouleurSol()==Color.green){
                                                ^